Changes for 1.5
* Added methods for AI to cheat in all games, using new properties: "AI Bonus Income Percentage", "AI Bonus Attack", "AI Bonus Defense". (veqryn)

* Fixed "not all units can blitz" bug. (veqryn)

* Made the engine write who (ai/human/client) is playing each player, each time game is loaded, to the history panel. (veqryn)

* Adding political map skin, and reconstructed basetiles, for Napoleonic Empires. (veqryn)

* Stopped blitzing out of a combat into further combat, if you began in same territory. (veqryn)

* Allowed less strict Edit Mode options. (veqryn)

* Changed PlayerID to record if the player is Human or AI, and which type of AI. (veqryn)

* Allowed territories with now hostile units to be redrawn, and have red markup, at the end of the politics delegate. (veqryn)

* Fixed bug where you could capture territory from a power you were neutral or allied with, if you attacked an enemy on their territory. (veqryn)

* Fixed multiple bugs surround territories suddenly made hostile. And created a new class, "RouteScripted", which allows for Routes that do not follow the normal rules. (veqryn)

* Fixed bug where territories with no units, had enemy units in them from a previous turn, did not start any battle, and where therefore never taken over. (veqryn)

* Fixed null pointer in Moore AI for when it owns a factory in a territory it does not control. (veqryn)

* Created new unit attachment, "special", which currently allows for "canOnlyPlaceInOriginalTerritories". (veqryn)

* Fixed zoom out and zoom in on the map with the Mouse Wheel, by holding down the "ALT" key. (veqryn)

* Changing relationship type attachment, upkeepCost, to allow an integer percentage, which will effect all income gained during the end of turn step. (veqryn)

* Re-allow booting (boot-slapping) of admins. (veqryn)

* Allowed double clicking for selecting a game, and had the choose game list be cached, with a refresh button. (qwertgold)
